# sales-report-system

./: .gitignore  CLAUDE.md  Makefile  package-lock.json  package.json
.github/workflows/: cd.yml  ci.yml
.husky/: pre-push
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  auth.py
backend/src/core/: __init__.py  config.py  database.py  dependencies.py  security.py
backend/src/models/: __init__.py  base.py  customer.py  daily_report.py  report_comment.py  salesperson.py  visit_record.py
backend/src/schemas/: __init__.py  auth.py  common.py
backend/tests/: conftest.py  test_config.py  test_database.py  test_main.py
docs/: api-specification.md  er-diagram.md  screen-definition.md  test-specification.md
frontend/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260111000001_create_salesperson_table/: migration.sql  rollback.sql
frontend/prisma/migrations/20260111000002_create_customer_table/: down.sql  migration.sql
frontend/prisma/migrations/20260111000003_create_daily_report_table/: down.sql  migration.sql
frontend/prisma/migrations/20260111000004_create_visit_record_table/: migration.sql  rollback.sql
frontend/prisma/migrations/20260111000005_create_report_comment_table/: migration.sql  rollback.sql
frontend/src/__tests__/: page.test.tsx
frontend/src/app/: layout.tsx  page.tsx
